--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,7 @@ tr {
     }
 }
 body {
+    position: relative;
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
     margin: 0;
@@ -270,7 +271,7 @@ footer {
 .popup-content {
     text-align: left;
     color: #333; 
-    font-size: 0.9rem; 
+    font-size: 0.5rem; 
 }
 
 .popup-content h2 {
@@ -282,7 +283,10 @@ footer {
 }
 
 .popup-content p {
-    color: #555;
+    color: #000000;
+    font-size: medium;
+    font-family: Arial, sans-seri;
+    font-weight: bold;
     line-height: 1.6;
     margin-bottom: 15px;
 }
@@ -310,8 +314,9 @@ footer {
 
 @media (max-width: 600px) {
     .popup {
-        width: 95%;
-        padding: 15px;
+        width: 70%;
+        padding: 10px;
+       
     }
 
     .back-button {
