--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+    overflow-x: hidden;
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
     margin: 0;
@@ -7,6 +8,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    user-select: none; /* Prevent text copying */
 }
 
 header {
@@ -16,26 +18,33 @@ header {
     color: #ecf0f1;
     width: 100%;
 }
+
 footer {
-    background-color: #ffffff;
+    background-color: #333;
     padding: 20px;
     text-align: center;
     color: #ecf0f1;
     width: 100%;
 }
+
 h1 {
     font-size: 2rem;
     margin-bottom: 5px;
     padding: 10px;
+    
 }
 
 h2 {
     font-size: 1.25rem;
     color: #bdc3c7;
     padding: 5px;
+
 }
 
 .breadcrumb {
+    font-size: large;
+    font-weight: bolder;
+    text-decoration: underline;
     padding: 10px;
     background-color: #ecf0f1;
     list-style: none;
@@ -45,6 +54,7 @@ h2 {
 }
 
 .breadcrumb li {
+    
     margin: 0 5px;
 }
 
@@ -79,18 +89,18 @@ p {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 1.875rem;
+    margin-top: 1rem;
 }
 
 .group-buttons button {
     background-color: #333;
     font-family: Arial, sans-serif;
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.125rem;
     padding: 1.563rem 3.125rem;
-    margin: 1.25rem;
+    margin: 1rem;
     border: none;
     border-radius: 8px;
     color: #fff;
@@ -98,7 +108,7 @@ p {
 }
 
 .group-buttons button:hover {
-    background-color: #333;
+    background-color: #555;
     transform: scale(1.05);
 }
 
@@ -132,53 +142,40 @@ table {
     margin: 1.25rem 0;
     border-collapse: collapse;
     overflow-x: auto;
-    display: table; 
+    display: table;
 }
 
 table, th, td {
     border: 1px solid #ddd;
 }
-th{
-    background-color:  #333;
+
+th {
+    background-color: #333;
     color: #fff;
-    
+    cursor: pointer;
 }
+
 th, td {
-    
     padding: 0.625rem;
     text-align: left;
     box-sizing: border-box;
 }
 
-thead {
-    display: table-header-group; 
+.dataTables_wrapper .dataTables_filter {
+    float: right;
+    text-align: right;
 }
 
-tbody {
-    display: table-row-group;
+.dataTables_wrapper .dataTables_paginate {
+    float: right;
+    text-align: right;
 }
 
-tr {
-    display: table-row; 
+.dataTables_wrapper .dataTables_info {
+    float: left;
+    text-align: left;
 }
 
-
-@media (max-width: 768px) {
-    table, th, td {
-        padding: 0.25rem;
-    }
-}
-body {
-    position: relative;
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
 .pagination {
     margin-top: 1.25rem;
     text-align: center;
@@ -186,6 +183,7 @@ body {
 
 button {
     padding: 0.625rem 1.25rem;
+    align-items: center;
     font-size: 1rem;
     background-color: #333;
     color: white;
@@ -207,6 +205,7 @@ button:hover {
     width: 1.25rem;
     height: 1.25rem;
     animation: spin 1s linear infinite;
+    align-items: center;
 }
 
 @keyframes spin {
@@ -214,22 +213,113 @@ button:hover {
     100% { transform: rotate(360deg); }
 }
 
-footer {
-    background-color: #333;
-    color: #ecf0f1;
-    padding: 0.625rem;
-    text-align: center;
-    width: 100%;
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 97%;
+    max-width: 400px;
+    background-color: rgb(255, 255, 255);
+    color: #fff;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    z-index: 1000;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow-y: auto;
+    max-height: 80vh;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-/* Responsive Styles */
+.popup-content {
+    text-align: left;
+    color: #1a1717;
+    font-size: 0.5rem;
+}
+
+.popup-content h2 {
+    color: #2e7d32;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 1.2rem;
+    border-bottom: 2px solid #2e7d32;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.popup-content p {
+    color: #000000;
+    font-size: medium;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    line-height: 1;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+.back-button {
+    display: block;
+    margin: 20px auto 0 auto;
+    padding: 10px 20px;
+    background-color: #5c5f5c;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    transition: background-color 0.2s ease-in-out, transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.back-button:hover {
+    background-color: #1b5e20;
+    transform: scale(1.05);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.popup-content .progress-bar-container {
+    width: 80%;
+    background-color: #bdbcbc;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-top: 0px;
+}
+
+.popup-content .progress-bar {
+    height: 10px;
+    text-align: center;
+    color: white;
+    line-height: 10px;
+    font-size: 0.7rem;
+    transition: width 0.2s ease-in-out;
+}
+
+.popup-content .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 3rem;
+    color: #961010;
+    cursor: pointer;
+    transition: color 0.2s ease-in-out;
+    
+}
+
+.popup-content .close-btn:hover {
+    background: red;
+    color: rgb(255, 255, 255);
+    transform: scale(2);
+}
+
 @media (max-width: 768px) {
     body {
         font-size: 0.8rem;
+        user-select: none; /* Prevent text copying */
     }
 
     h1 {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 
     h2 {
@@ -249,74 +339,10 @@ footer {
         width: 1rem;
         height: 1rem;
     }
-}
-.popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%;
-    max-width: 400px;
-    background-color: #f9f9f9; 
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    z-index: 1000;
-    padding: 20px;
-    box-sizing: border-box;
-    overflow-y: auto;
-    max-height: 80vh; 
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-}
 
-.popup-content {
-    text-align: left;
-    color: #333; 
-    font-size: 0.5rem; 
-}
-
-.popup-content h2 {
-    color: #2e7d32; 
-    margin-bottom: 10px;
-    font-size: 1.2rem; 
-    border-bottom: 2px solid #2e7d32; 
-    padding-bottom: 5px;
-}
-
-.popup-content p {
-    color: #000000;
-    font-size: medium;
-    font-family: Arial, sans-seri;
-    font-weight: bold;
-    line-height: 1.6;
-    margin-bottom: 15px;
-}
-
-.back-button {
-    display: block;
-    margin: 20px auto 0 auto;
-    padding: 10px 20px;
-    background-color: #2e7d32;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 0.9rem; 
-    transition: background-color 0.2s ease-in-out, transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
-}
-
-.back-button:hover {
-    background-color: #1b5e20;
-    transform: scale(1.05); 
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
-}
-
-
-@media (max-width: 600px) {
     .popup {
         width: 70%;
         padding: 10px;
-       
     }
 
     .back-button {
@@ -325,37 +351,17 @@ footer {
     }
 }
 
-
-.popup-content .progress-bar-container {
-    width: 80%;
-    background-color: #e0e0e0;
-    border-radius: 4px;
+* {
+    -webkit-tap-highlight-color: transparent;
+    user-select: none; /* Prevent text copying */
+}
+body.locked {
     overflow: hidden;
-    margin-top: 0px;
 }
 
-.popup-content .progress-bar {
-    height: 10px;
-    text-align: center;
-    color: white;
-    line-height: px;
-    font-size: 0.5rem;
-    transition: width 0.2s ease-in-out;
-}
-
-.popup-content .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 2rem; 
-    color: #333;
-    cursor: pointer;
-    transition: color 0.2s ease-in-out; 
-}
-
-
-.popup-content .close-btn:hover {
-    background: red;
-    color: rgb(255, 255, 255);
-    transform: scale(1.1);
+@media (max-width: 768px) {
+    body.locked {
+        position: fixed;
+        width: 100%;
+    }
 }
