--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    user-select: none; /* Prevent text copying */
+    user-select: none;
 }
 
 header {
@@ -95,27 +95,22 @@ p {
     flex-wrap: wrap;
     margin-top: 1rem;
 }
-
 .group-buttons button {
     background-color: #333;
-    font-family: Arial, sans-serif;
     font-size: 1rem;
     font-weight: bold;
     text-transform: uppercase;
-    letter-spacing: 0.125rem;
-    padding: 1.563rem 3.125rem;
+    padding: 10px 20px;
     margin: 1rem;
     border: none;
     border-radius: 8px;
     color: #fff;
-    transition: background-color 0.2s ease-in-out, transform 0.2s;
+    transition: background-color 0.2s, transform 0.2s;
 }
-
 .group-buttons button:hover {
     background-color: #555;
     transform: scale(1.05);
 }
-
 .search-container {
     margin: 0.625rem 0;
     width: 100%;
