--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 html, body {
     overflow-x: hidden;
     width: 100%;
+    align-items: center;
+    
 }
 body {
     overflow-x: hidden;
@@ -21,6 +23,10 @@ header {
     text-align: center;
     color: #ecf0f1;
     width: 100%;
+    border: 3px solid #ff0000;
+    border-radius: 4px;
+    font-weight: bolder;
+
 }
 
 footer {
@@ -29,12 +35,16 @@ footer {
     text-align: center;
     color: #ecf0f1;
     width: 100%;
+    border: 3px solid #ff0000;
+    border-radius: 4px;
 }
 
 h1 {
     font-size: 2rem;
     margin-bottom: 5px;
     padding: 10px;
+    font-weight: bolder;
+
     
 }
 
@@ -46,6 +56,7 @@ h2 {
 }
 
 .breadcrumb {
+    align-items: center;
     font-size: large;
     font-weight: bolder;
     text-decoration: underline;
@@ -81,11 +92,13 @@ p {
 }
 
 .year-dropdown select {
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
+    align-items: center;
+    padding: 6px;
+    font-weight: bolder;
+    font-size: 20px;
+    border: 3px solid #ff0000;
     border-radius: 4px;
-    width: 200px;
+    width: 270px;
     margin-bottom: 20px;
 }
 
@@ -97,13 +110,14 @@ p {
 }
 .group-buttons button {
     background-color: #333;
-    font-size: 1rem;
+    font-size: 1.75rem;
     font-weight: bold;
     text-transform: uppercase;
     padding: 10px 20px;
     margin: 1rem;
     border: none;
-    border-radius: 8px;
+    
+    border-radius: 9px;
     color: #fff;
     transition: background-color 0.2s, transform 0.2s;
 }
@@ -112,6 +126,7 @@ p {
     transform: scale(1.05);
 }
 .search-container {
+
     margin: 0.625rem 0;
     width: 100%;
     padding: 0 10px;
@@ -122,6 +137,7 @@ p {
 }
 
 label {
+    
     display: block;
     font-weight: bold;
     margin-bottom: 0.5rem;
@@ -130,7 +146,7 @@ label {
 input[type="text"], select {
     width: 90%;
     padding: 0.625rem;
-    border: 1px solid #ddd;
+    border: 1px solid #ff0000;
     border-radius: 4px;
     box-sizing: border-box;
     margin-bottom: 0.625rem;
@@ -213,6 +229,8 @@ button:hover {
 }
 
 .popup {
+    border: 4px solid #000000;
+    border-radius: 4px;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -232,6 +250,7 @@ button:hover {
 }
 
 .popup-content {
+    
     text-align: left;
     color: #1a1717;
     font-size: 0.5rem;
@@ -278,6 +297,8 @@ button:hover {
 }
 
 .popup-content .progress-bar-container {
+    border: 1px solid #000000;
+    border-radius: 4px;
     width: 80%;
     background-color: #bdbcbc;
     border-radius: 4px;
@@ -289,12 +310,15 @@ button:hover {
     height: 10px;
     text-align: center;
     color: white;
+    font-weight: bolder;
     line-height: 10px;
     font-size: 0.7rem;
     transition: width 0.2s ease-in-out;
 }
 
 .popup-content .close-btn {
+    border: 1px solid #080808;
+    border-radius: 4px;
     position: absolute;
     top: 10px;
     right: 10px;
