--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@ p {
     background: url('search.png') no-repeat 10px center;
     background-size: 16px 16px;
     padding-left: 30px; 
+    
 }
 
 .group-buttons button:hover {
@@ -141,6 +142,7 @@ label {
 input[type="text"], select {
     width: 90%;
     padding: 0.625rem;
+    padding-left: 2%;
     border: 1px solid #0061FE;
     border-radius: 4px;
     box-sizing: border-box;
@@ -164,6 +166,21 @@ textarea[id="message"], select {
     box-sizing: border-box;
     margin-bottom: 0.625rem;
 }
+
+textarea[id="InstituationDropdown"], select {
+    width: 90%;
+    padding: 0.625rem;
+    border: 1px solid #0061FE;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 0.625rem;
+}
+body.dark-mode .menu-btn{
+        color: #bbb;}
+
+body.dark-mode .search-input{
+    background-color: #000;
+        color: #bbb;}
 table {
     width: 100%;
     margin: 1.25rem 0;
@@ -321,7 +338,7 @@ button:hover {
     display: block;
     margin: 20px auto 0;
     padding: 10px 20px;
-    background-color: #5c5f5c;
+    background-color: #008c00;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -403,8 +420,10 @@ button:hover {
     }
 
     button {
-        padding: 0.5rem 1rem;
-        font-size: 0.875rem;
+        padding: 0.50rem 0.50rem;
+        font-size: 0.66rem;
+        border: none;
+        border-radius: 0px;
     }
 
     .loading-spinner {
@@ -416,10 +435,15 @@ button:hover {
         width: 70%;
         padding: 10px;
     }
-
+    
     .back-button {
         font-size: 0.8rem;
         padding: 8px 15px;
+    }
+    input[type="text"], select {
+
+        padding-left: 8%;
+
     }
 }
 
@@ -428,11 +452,10 @@ button:hover {
     user-select: none;
 }
 
-body.locked {
-    overflow: hidden;
-}
+
 
 body.locked {
+    overflow: hidden;
     position: fixed;
     width: 100%;
 }
@@ -577,11 +600,13 @@ header img.home-icon {
     position: absolute;
     top: 15px;
     left: 12.5px;
-    width: 18px; /* Adjusted size */
-    height: 18px; /* Adjusted size */
+    width: 18px;
+    height: 18px; 
     cursor: pointer;
     z-index: 1001;
-    color: #666666;
+    color: #ffffff;
+    cursor:pointer;
+    
 }
 @keyframes popupOutAnimation {
     0% {
@@ -599,7 +624,6 @@ header img.home-icon {
 .popup.pop-out.hidden {
     display: none;
 }
-/* Button Ripple Effect */
 @keyframes ripple {
     to {
         transform: scale(4);
@@ -649,3 +673,63 @@ button:active::after {
 
 
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes slideIn {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-30px);
+    }
+    60% {
+        transform: translateY(-15px);
+    }
+}
+
+header h1 {
+    animation: fadeIn 2s ease-in-out;
+}
+
+header h2 {
+    animation: fadeIn 2.25s ease-in-out;
+}
+
+.sidebar button {
+    animation: bounce 11.5s infinite;
+}
+#scrollToTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: calc(center);
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #d9d9d9;
+  color: white;
+  cursor: pointer;
+  padding: 0px;
+  border-radius: 200%;
+}
+
+#scrollToTopBtn img {
+  width: 40px;
+  height: 40px;
+}
