--- a/styles.css
+++ b/styles.css
@@ -21,13 +21,13 @@ header, footer {
     text-align: center;
     color: #ecf0f1;
     width: 100%;
-    border: 3px solid #d4d4d4;
+    border: 3px solid #d7d7d7;
     border-radius: 4px;
     font-weight: bolder;
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 3rem;
     margin-bottom: 5px;
     padding: 10px;
     font-weight: bolder;
@@ -78,7 +78,7 @@ p {
     padding: 6px;
     font-weight: bolder;
     font-size: 20px;
-    border: 3px solid #c6c8cc;
+    border: 3px solid #cccccc;
     border-radius: 4px;
     width: 270px;
     margin-bottom: 20px;
@@ -234,7 +234,7 @@ button {
 }
 
 button:hover {
-    background-color: #3b5998;
+    background-color: #0df40d;
     transform: scale(1.05);
 }
 
@@ -300,7 +300,7 @@ button:hover {
     display: block;
     margin: 20px auto 0;
     padding: 10px 20px;
-    background-color: #5c5f5c;
+    background-color: #022802;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -315,15 +315,6 @@ button:hover {
     transform: scale(1.05);
 }
 
-.popup-content input[type="password"] {
-    width: calc(100% - 22px);
-    padding: 10px;
-    border: 1px solid #0061FE;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 10px;
-    font-size: 1rem;
-}
 
 .popup-content p {
     color: #000000;
@@ -378,8 +369,8 @@ button:hover {
 }
 
 .popup-content .close-btn {
-    border: 1px solid #080808;
-    border-radius: 4px;
+    border: 0.75px solid #080808;
+    border-radius: 2px;
     position: absolute;
     top: 10px;
     right: 10px;
@@ -408,7 +399,7 @@ button:hover {
     }
 
     h1 {
-        font-size: 1.4rem;
+        font-size: 2rem;
     }
 
     h2 {
@@ -432,8 +423,11 @@ button:hover {
     }
 
     .popup {
-        width: 70%;
+        width: 90%;
+        min-height: 89%;
         padding: 10px;
+        padding-top: 40px;
+        border: 5px;
     }
     
     .back-button {
@@ -587,12 +581,14 @@ body:not(.dark-mode) .student-name,
 body:not(.dark-mode) .student-roll,
 body:not(.dark-mode) .student-school {
     color: indigo;
+    font-weight: bolder;
 }
 
 body.dark-mode .student-name,
 body.dark-mode .student-roll,
 body.dark-mode .student-school {
     color: white;
+    font-weight: bolder;
 }
 
 
@@ -726,11 +722,10 @@ header h2 {
   color: white;
   cursor: pointer;
   padding: 0px;
-  border-radius: 200%;
-  border-image-outset: #000;
+  border-radius: 150%;
 }
 
 #scrollToTopBtn img {
-  width: 40px;
-  height: 40px;
+  width: 32x;
+  height: 32px;
 }
