--- a/styles.css
+++ b/styles.css
@@ -360,7 +360,7 @@ button:hover {
     font-weight: bolder;
     line-height: 10px;
     font-size: 0.7rem;
-    transition: width 0.2s ease-in-out;
+    transition: width 1.5s ease, background-color 1.5s ease;
     color: rgb(255, 255, 255);
 }
 
@@ -971,4 +971,23 @@ body.dark-mode .compare-table th {
 body.dark-mode .compare-table td {
     background-color: #111;
     color: #fff;
+}
+
+.ripple {
+    position: absolute;
+    background: rgba(255, 255, 255, 0.4);
+    border-radius: 50%;
+    transform: scale(0);
+    animation: rippleAnimation 0.6s linear;
+    pointer-events: none;
+    width: 100px;
+    height: 100px;
+    opacity: 0.75;
+}
+
+@keyframes rippleAnimation {
+    to {
+        transform: scale(4);
+        opacity: 0;
+    }
 }
