--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,7 @@ button:hover {
     border-radius: 4px;
     position: fixed;
     top: 50%;
+    z-index: 9999;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
     width: 97%;
